# achmedius-ai

./: .gitignore  .pdm-python  README.md  main.py  pyproject.toml  setup.sh
achmedius_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lib/: __init__.py  output_generator.py  prompt_generator.py  topic_generator.py  utils.py
